--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,37 +1,52 @@
 <footer class="ae-container-fluid rk-footer ">
     <div class="ae-grid ae-grid--collapse">
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-left">
+
             <ul class="rk-menu rk-footer-menu">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a>
+
+                <li class="rk-menu__item" routerLinkActive="active"><a routerLink="/portafolio" class="rk-menu__link">
+                    Portafolio
+                </a>
                 </li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Docs</a>
+                <li class="rk-menu__item" routerLinkActive="active"><a routerLink="/about" class="rk-menu__link">
+                    About
+                </a>
                 </li>
-                <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
-                </li>
+
             </ul>
-            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} Danilo García </span>Todos los derechos reservados.</p>
+
+            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span>
+                <span class="ae-u-bolder">{{ anio }} {{ infoService.info.nombre_corto }} </span> Todos los derechos reservados.
+            </p>
+
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]=" infoService.info.facebook " class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]=" infoService.info.twitter " class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]=" infoService.info.instagram " class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
           </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blank" [href]=" infoService.info.tublr " class="rk-social-btn ">
                 <svg>
             <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
-          </svg></a>
+          </svg>
+            </a>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@urkuportfolio.com </a></span></p>
-            <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> 
+                <a target="_blank" [href]=" infoService.info.email " class="rk-dark-color "> {{ infoService.info.email }} </a>
+            </span>
+            </p>
+            <p class="rk-footer__text rk-footer__by">Theme by
+                <a href="#" class="ae-u-bolder"> Pixaden </a>
+            </p>
         </div>
     </div>
 </footer>
