--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="ae-container-fluid ae-container-fluid--full rk-header ">
+<header class="ae-container-fluid ae-container-fluid--full rk-header " *ngIf="infoPagina.info">
     <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
     <label for="mobile-menu">
       <svg>
@@ -32,14 +32,21 @@
                 </li>
 
             </ul>
-            <form class="rk-search">
-                <input type="text" placeholder="Buscar" id="urku-search" class="rk-search-field">
+
+            <div class="rk-search">
+
+                <input (keyup.enter)="buscarProducto(txtBuscar.value)" #txtBuscar type="text" placeholder="Buscar" id="urku-search" class="rk-search-field">
                 <label for="urku-search">
+
             <svg>
+
               <use xlink:href="assets/img/symbols.svg#icon-search"></use>
             </svg>
+
           </label>
-            </form>
+
+            </div>
+
         </nav>
     </div>
 </header>
